--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,17 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://localhost/WebsiteCheck
+      #iemss2019.com
+      #uri: mongodb://localhost/WebsiteCheck
+
+      #peianping.com
+      host: 47.101.223.194
+      port: 27017
+      username: homepage
+      password: 1qaz@wsx
+      database: homepage
+
+
 
   thymeleaf:
     prefix: classpath:/templates/
@@ -21,4 +31,7 @@ spring:
     properties.mail.smtp.auth: true
     properties.mail.smtp.starttls.enable: true
     properties.mail.smtp.starttls.required: true
+
+managerEmail: 921485453@qq.com
+watcherEmail: chenmin0902@163.com
     
